<resources>
    <string name="app_name">Virtual Valtteri 🏁</string>
    <string-array name="speakers">
        <item>Basic team radio</item>
        <item>Just numbers</item>
    </string-array>

    <string name="speaker_label">Radio mode</string>
    <string-array name="speaker_choices">
        <item>Basic team radio</item>
        <item>Just numbers</item>
        <item>Quiet</item>
    </string-array>
    <string-array name="speaker_class_names">
        <item>Speaker</item>
        <item>VeryShort</item>
        <item>Quiet</item>
    </string-array>
    <string name="speaker_default">Speaker</string>
    <string name="speaker_summary">Different speakers say different things, using more or less words.</string>
    <string name="speaker_title">Speaker</string>
    <string name="key_speaker">speaker_key</string>

    <string name="drivers_title">Select driver to follow</string>
    <string name="drivers_key">drivers_key</string>
    <string-array name="drivers_initial_entries">
        <item>You can select driver(s) here once the session has started.</item>
    </string-array>
    <string-array name="drivers_initial_values">
        <item>default</item>
    </string-array>

    <string name="favorited_drivers_dialog_title">Unselect drivers you no longer want to follow</string>
    <string name="favorited_drivers_title">Remember and follow these drivers</string>
    <string-array name="favorited_drivers_initial_entries">
        <item>You have not followed any drivers yet</item>
    </string-array>
    <string-array name="favorited_drivers_initial_values">
        <item>default</item>
    </string-array>
    <string name="auto_favorite_title">Automatically remember drivers you followed</string>

    <string name="carNrDefault">00</string>
    <string name="positionDefault">P0</string>
    <string name="largeTextDefault">00.0</string>
    <string name="initialHint">Select which driver to follow here 👇</string>

    <string-array name="collect_sensor_data_choices">
        <item>On</item>
        <item>Off</item>
        <item>Automatically during race</item>
    </string-array>
    <string-array name="collect_sensor_data_values">
        <item>on</item>
        <item>off</item>
        <item>race</item>
    </string-array>
    <string-array name="system_close_key_choices">
        <item>On</item>
        <item>Close</item>
    </string-array>
</resources>