<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <!--below line is to create preference category-->
        <PreferenceCategory android:title="Drivers">

                <com.virtualvaltteri.DynamicMultiSelectListPreference
                    android:key="drivers_key"
                    android:dialogTitle="@string/drivers_title"
                    android:summary=""
                    android:title="@string/drivers_title"
                    android:entries="@array/drivers_initial_entries"
                    android:entryValues="@array/drivers_initial_values"
                    android:id="@+id/id_drivers_preference"
                    android:persistent="true"/>

                <MultiSelectListPreference
                    android:key="favorited_drivers_key"
                    android:dialogTitle="@string/favorited_drivers_dialog_title"
                    android:title="@string/favorited_drivers_title"
                    android:entries="@array/drivers_initial_entries"
                    android:entryValues="@array/drivers_initial_values"
                    android:persistent="true"/>

                <SwitchPreference
                    android:key="auto_favorite_key"
                    android:dialogTitle="@string/auto_favorite_title"
                    android:title="@string/auto_favorite_title"
                    android:defaultValue="true"
                    android:persistent="true"/>

        </PreferenceCategory>
        <!--below line is to create preference category-->
        <PreferenceCategory android:title="Radio">
                <ListPreference
                    android:defaultValue="@string/speaker_default"
                    android:dialogTitle="@string/speaker_label"
                    android:entries="@array/speaker_choices"
                    android:entryValues="@array/speaker_class_names"
                    android:key="@string/key_speaker"
                    android:summary="%s"
                    android:title="@string/speaker_title" />

        </PreferenceCategory>

</PreferenceScreen>
